# Gamer

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DUAL-SCREEN-PLAN.md  README.md  docker-compose.yml  package-lock.json  package.json
.devcontainer/: devcontainer.json
.github/workflows/: build-emulator-images.yml  build-vm-image.yml  coder-workspace-launch.yaml  deploy-provisioner-api.yml  deploy-web-app.yml
.github/workflows-off/: deploy-agent-api.yml
.likec4/: model.likec4  spec.likec4  views.likec4
docs/: DEVELOPMENT.md
docs/windows/: WINDOWS_GAMING_STACK.md  WINDOWS_TENSORDOCK_V100_TESTING.md
images/azahar-sunshine/: Dockerfile
images/azahar-sunshine/overlay/gamer/conf/azahar/: qt-config.ini
images/azahar-sunshine/overlay/gamer/conf/supervisor/conf.d/: azahar.conf
images/base-sunshine/: Dockerfile
images/base-sunshine/overlay/gamer/: entrypoint.sh
images/base-sunshine/overlay/gamer/conf/openbox/: rc.xml
images/base-sunshine/overlay/gamer/conf/sunshine/: apps.json  sunshine-bottom.conf.template  sunshine-top.conf.template
images/base-sunshine/overlay/gamer/conf/supervisor/: supervisord.conf
images/base-sunshine/overlay/gamer/conf/x11/: xorg-dummy.conf
images/base-sunshine/overlay/gamer/conf/x11/templates/: xorg-nvidia-dual.conf  xorg-nvidia-single.conf
infrastructure/: deploy-input-remap.sh
infrastructure/emulator-images/_common/: 30-nvidia-readonly-safe.sh  startup-app.sh
infrastructure/emulator-images/citra/: Dockerfile  startup-app.sh
infrastructure/emulator-images/dolphin/: Dockerfile  startup-app.sh
infrastructure/emulator-images/eden/: Dockerfile
infrastructure/emulator-images/melonds/: Dockerfile  startup-app.sh
infrastructure/emulator-images/ppsspp/: Dockerfile  startup-app.sh
infrastructure/emulator-images/ryujinx/: Dockerfile  startup-app.sh
infrastructure/emulator-images/steam/: Dockerfile  startup-app.sh
infrastructure/gaming-vm/: deploy-tensordock.sh  docker-compose.yml
infrastructure/gaming-vm/shaders/: README.md
infrastructure/gaming-vm/wolf/: config.toml
infrastructure/poc-3ds/: DUAL-SCREEN-ARCHITECTURE.md  README.md  deploy-tensordock.sh  docker-compose.yml  setup-rclone.sh  setup-vm.sh
infrastructure/poc-3ds/azahar/: 30-nvidia-readonly-safe.sh  Dockerfile  startup-app.sh
infrastructure/poc-3ds/azahar/azahar-config/: qt-config.ini
infrastructure/poc-3ds/wolf/: Dockerfile.wolf-dual  bottom-screen-keepalive.sh  config.toml
infrastructure/uinput-proxy/: input-remap-proxy.py  touch-remap-proxy.py
infrastructure/vm-image/: Dockerfile
infrastructure/windows/: README.md  bootstrap-windows.ps1  deploy_via_ssh.py  install-agent-service.ps1  orchestrate_windows_host.py  provision-tensordock-windows.py  rdp_bootstrap.py  validate_windows_host.py
infrastructure/windows/scripts/: apollo-on-client-connect.ps1  apollo-on-client-disconnect.ps1  move-window-next-monitor.ahk  position-azahar-dual.ps1
infrastructure/wolf-dual-screen/: Dockerfile.fix  README.md  REMAINING-ISSUES.md  comp_mod.rs  deploy-fixes.sh  gst_plugin_Cargo.toml  handlers_compositor.rs  handlers_x11.rs  waylandsecondary_imp.rs  waylandsrc_imp.rs  wolf-config.toml
services/client-agent/: Dockerfile  requirements.txt
services/client-agent/manifests/: session_manifest.windows.dev.json
services/client-agent/src/: main.py
services/provisioner-api/: .env.example  Dockerfile  Dockerfile.dev  Dockerfile.production  Makefile  README.md  README_TESTING.md  TESTING.md  base-workspace-requirements.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  test.sh
services/provisioner-api/app/: README.md  main.py
services/provisioner-api/app/core/: README.md  config.py  database.py  sync_database.py
services/provisioner-api/app/models/: README.md  console_config.py  emulator_config.py  gcp_region.py  vm.py  vm_preset.py
services/provisioner-api/app/routers/: README.md  billing.py  config.py  console_config.py  gaming.py  gaming_claude copy.py  gaming_claude.py  gaming_implemented.py  gaming_skeleton.py  gcp_regions.py  instances.py  launch.py  vm_specs.py  vms.py
services/provisioner-api/app/services/: README.md  billing_service.py  cloudypad_service.py  gcp_compute_service.py  gcp_compute_service_claude.py  gcp_region_db_service.py  gcp_region_service.py  geocoding_service.py  instance_options_service.py  region_service.py  startup_script_service.py  tensordock_service.py  vm_orchestrator.py  vm_spec_service.py  vm_store.py
services/provisioner-api/scripts/: install-deps.sh
services/provisioner-api/tests/: Dockerfile  README.md  __init__.py  conftest.py  docker-compose.yml  factories.py  test.sh
services/provisioner-api/tests/integration/: test_api_integration.py
services/provisioner-api/tests/unit/: test_create_instance.py  test_get_instance_status.py  test_list_available_instances.py  test_start_instance.py
services/provisioner-api/tests/unit/routers/: __init__.py  test_create_instance.py  test_gaming_operations.py  test_get_instance_status.py
services/web-app/: Dockerfile  next.config.js  package.json
tools/shader-overlay/: Cargo.toml  build.rs
tools/shader-overlay/src/: capture.rs  gl_context.rs  main.rs  overlay.rs  shader.rs  window.rs
